--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -73,7 +73,8 @@ http {
 
         # Redirección del dominio raíz
         location = / {
-            return 301 https://$host/cambiovuelo/inicio.html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            return 302 https://$host/cambiovuelo/inicio.html;
         }
 
         location / {
