--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -73,8 +73,12 @@ http {
 
         # Redirección del dominio raíz
         location = / {
+            set $redirect_host $host;
+            if ($http_x_forwarded_host) {
+                set $redirect_host $http_x_forwarded_host;
+            }
             add_header Cache-Control "no-cache, no-store, must-revalidate";
-            return 302 https://$host/cambiovuelo/inicio.html;
+            return 302 https://$redirect_host/cambiovuelo/inicio.html;
         }
 
         location / {
