--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -71,14 +71,9 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # Redirección del dominio raíz
+        # Redirección del dominio raíz (configurada via ROOT_REDIRECT)
         location = / {
-            set $redirect_host $host;
-            if ($http_x_forwarded_host) {
-                set $redirect_host $http_x_forwarded_host;
-            }
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            return 302 https://$redirect_host/cambiovuelo/inicio.html;
+            return 301 ${ROOT_REDIRECT};
         }
 
         location / {
